--- a/index.css
+++ b/index.css
@@ -45,7 +45,7 @@ p {
     margin-bottom:40px;
     font-family: 'Sansita Swashed', cursive;
     padding: 10px;
-    color: #f4511e;
+    color: #F4EA74;
     text-shadow: 1px 1px black;
     font-weight: bold;
     font-size: 2rem;
